# vicocomo

./: .gitignore  CHANGELOG  Cargo.toml  README.md  dependencies.toml  rustfmt.toml
examples/authorization/actix/: Cargo.toml
examples/authorization/actix/src/: main.rs
examples/authorization/password_digest/: Cargo.toml
examples/authorization/password_digest/src/: main.rs
examples/html/html_form/: Cargo.toml
examples/html/html_form/src/: main.rs
examples/http_server/actix/: .gitignore  Cargo.toml
examples/http_server/actix/public/: application.css  static.html
examples/http_server/actix/src/: controllers.rs  main.rs
examples/http_server/actix/templates/: header-en.hbs  home.hbs
examples/http_server/actix_db_session/: Cargo.toml
examples/http_server/actix_db_session/src/: main.rs
examples/http_server/actix_postgres_session_handlebars/: Cargo.toml
examples/http_server/actix_postgres_session_handlebars/src/: controllers.rs  main.rs
examples/http_server/actix_postgres_session_handlebars/templates/: header-en.hbs  home.hbs
examples/model/postgres/: .env  .gitignore  Cargo.toml
examples/model/postgres/src/: belongs_to.rs  delete.rs  main.rs  many_to_many.rs  models.rs  multi_pk.rs  no_pk.rs  nonstandard_parent.rs  one_to_many.rs  single_pk.rs
examples/reset_test_db/: .gitignore  Cargo.toml
examples/reset_test_db/src/: main.rs
vicocomo/: Cargo.toml
vicocomo/examples/authorization/actix/: Cargo.toml
vicocomo/examples/authorization/actix/src/: main.rs
vicocomo/examples/authorization/password_digest/: Cargo.toml
vicocomo/examples/authorization/password_digest/src/: main.rs
vicocomo/examples/html/html_form/: Cargo.toml
vicocomo/examples/html/html_form/src/: main.rs
vicocomo/examples/http_server/actix/: Cargo.toml
vicocomo/examples/http_server/actix/config/: texts.cfg
vicocomo/examples/http_server/actix/src/: controllers.rs  main.rs  views.rs
vicocomo/examples/http_server/actix/templates/: header-sv.hbs  home.hbs
vicocomo/examples/http_server/actix_postgres_session/: Cargo.toml
vicocomo/examples/http_server/actix_postgres_session/src/: main.rs
vicocomo/examples/http_server/actix_read_file/: Cargo.toml
vicocomo/examples/http_server/actix_read_file/src/: controllers.rs  main.rs  views.rs
vicocomo/examples/http_server/actix_read_file/templates/: home.hbs  show_file.hbs
vicocomo/examples/http_server/actix_sqlite/: .gitignore  Cargo.toml
vicocomo/examples/http_server/actix_sqlite/db/: init.sql
vicocomo/examples/http_server/actix_sqlite/src/: main.rs
vicocomo/examples/http_server/actix_sqlite/templates/: home.hbs
vicocomo/examples/http_server/actix_upload_file/: .gitignore  Cargo.toml
vicocomo/examples/http_server/actix_upload_file/src/: controllers.rs  main.rs  views.rs
vicocomo/examples/http_server/actix_upload_file/templates/: home.hbs
vicocomo/examples/http_server/if/: Cargo.toml
vicocomo/examples/http_server/if/src/: main.rs
vicocomo/examples/http_server/local/: Cargo.toml
vicocomo/examples/http_server/local/src/: lib.rs
vicocomo/examples/http_server/tauri_sqlite/: .gitignore  init.sh  manual-test.txt  test.sh
vicocomo/examples/http_server/tauri_sqlite/src-tauri/: Cargo.toml  tauri.conf.json
vicocomo/examples/http_server/tauri_sqlite/src-tauri/config/: texts.cfg
vicocomo/examples/http_server/tauri_sqlite/src-tauri/db/: init.sql
vicocomo/examples/http_server/tauri_sqlite/src-tauri/src/: main.rs
vicocomo/examples/http_server/tauri_sqlite/ui/: index.html
vicocomo/examples/model/common/: Cargo.toml
vicocomo/examples/model/common/src/: belongs_to.rs  csv.rs  delete.rs  lib.rs  many_to_many.rs  models.rs  multi_pk.rs  no_pk.rs  nonstandard_parent.rs  one_to_many.rs  random.rs  serialize.rs  single_pk.rs
vicocomo/examples/model/postgres/: Cargo.toml  README
vicocomo/examples/model/postgres/src/: main.rs
vicocomo/examples/model/sqlite/: .gitignore  Cargo.toml
vicocomo/examples/model/sqlite/src/: main.rs
vicocomo/examples/reset_test_db_postgres/: Cargo.toml
vicocomo/examples/reset_test_db_postgres/src/: main.rs
vicocomo/src/: active_record.rs  authorization.rs  controller.rs  database.rs  error.rs  flash.rs  html.rs  http.rs  lib.rs  texts.rs  utils.rs  view.rs
vicocomo/src/html/: input.rs  utils.rs
vicocomo/src/http/: config.rs  server.rs
vicocomo/tests/: authorization_actix_test.rs  authorization_password_digest_test.rs  html_input_html_form_test.rs  http_server_actix_postgres_session_test.rs  http_server_actix_read_file_test.rs  http_server_actix_sqlite_test.rs  http_server_actix_test.rs  http_server_actix_upload_file_test.rs  http_server_if_test.rs  http_server_tauri_sqlite_test.rs  model_postgres_test.rs  model_sqlite_test.rs  vicocomo_bcrypt_test.rs
vicocomo_active_record/: Cargo.toml
vicocomo_active_record/src/: belongs_to.rs  common.rs  delete.rs  find.rs  has_many.rs  lib.rs  model.rs  save.rs  to_fro_sql.rs
vicocomo_actix/: Cargo.toml
vicocomo_actix/config/: Cargo.toml
vicocomo_actix/config/src/: lib.rs
vicocomo_actix/src/: lib.rs  session.rs
vicocomo_db_macro/: Cargo.toml
vicocomo_db_macro/src/: db_value_convert.rs  lib.rs
vicocomo_db_macros/: Cargo.toml
vicocomo_db_macros/src/: db_value_convert.rs  lib.rs
vicocomo_derive_utils/: Cargo.toml
vicocomo_derive_utils/src/: lib.rs
vicocomo_handlebars/: Cargo.toml
vicocomo_handlebars/src/: lib.rs
vicocomo_html_derive/: Cargo.toml
vicocomo_html_derive/src/: lib.rs  path_tag.rs
vicocomo_html_macros/: Cargo.toml
vicocomo_html_macros/src/: html_form.rs  lib.rs  path_tag.rs
vicocomo_postgres/: Cargo.toml
vicocomo_postgres/src/: lib.rs
vicocomo_presenter_macro/: Cargo.toml
vicocomo_presenter_macro/src/: lib.rs  presenter.rs
vicocomo_proc_macro/: Cargo.toml
vicocomo_proc_macro/src/: db_value_convert.rs  delete.rs  find.rs  lib.rs  model.rs  path_tag.rs  save.rs  utils.rs
vicocomo_session_model/: Cargo.toml
vicocomo_session_model/src/: lib.rs
vicocomo_tauri/: Cargo.toml
vicocomo_tauri/config/: Cargo.toml
vicocomo_tauri/config/src/: lib.rs
vicocomo_tauri/src/: lib.rs
(+109 files in other folders)
