[workspace]
members = [
  "vicocomo",
  "vicocomo_active_record",
  "vicocomo_actix",
  "vicocomo_actix/config",
  "vicocomo_bcrypt",
  "vicocomo_db_macros",
  "vicocomo_derive_utils",
  "vicocomo_handlebars",
  "vicocomo_html_macros",
  "vicocomo_postgres",
  "vicocomo_session_model",
  "vicocomo_sqlite",
  "vicocomo_tauri",
]

[workspace.package]
version = "0.5.0"
description = "A framwork for MVC and DCI patterns"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[workspace.dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-session = "0.7.2"
actix-web = "4.3.0"
bcrypt = "0.14.0"
case = "1.0.0"
chrono = "0.4.23"
futures = "0.3.26"
handlebars = "4.3.6"
itertools = "0.10.5"
lazy_static = "1.4.0"
postgres-types = "0.2.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
rand = "0.8.5"
regex = "1.7.1"
rusqlite = "0.29.0"
serde = "1.0.152"
serde_json = "1.0.93"
syn = "1.0.107"
tokio-postgres = "0.7.7"
url = "2.4.1"
urlencoding = "2.1.2"
v_htmlescape = "0.15.8"
