[package]
name = "vicocomo"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
case.workspace = true
chrono = { workspace = true, features = ["serde"] }
itertools.workspace = true
lazy_static.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
url.workspace = true
urlencoding.workspace = true
v_htmlescape.workspace = true
vicocomo_active_record = { path = "../vicocomo_active_record", version = "0.5.0" }
vicocomo_db_macros = { path = "../vicocomo_db_macros", version = "0.5.0" }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils", version = "0.5.0" }
vicocomo_html_macros = { path = "../vicocomo_html_macros", version = "0.5.0" }
vicocomo_session_model = { path = "../vicocomo_session_model", version = "0.5.0" }

[dev-dependencies]
ljumvall_test_utils = { path = "../../ljumvall/test_utils", version = "0.2.0" }
