[package]
name = "vicocomo"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
case.workspace = true
chrono = { workspace = true, features = ["serde"] }
itertools.workspace = true
ljumvall_utils.workspace = true
logos.workspace = true
proc-macro2.workspace = true
quote.workspace = true
rand.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
url.workspace = true
urlencoding.workspace = true
v_htmlescape.workspace = true
vicocomo_active_record = { path = "../vicocomo_active_record", version = "0.6.0" }
vicocomo_db_macros = { path = "../vicocomo_db_macros", version = "0.6.0" }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils", version = "0.6.0" }
vicocomo_html_macros = { path = "../vicocomo_html_macros", version = "0.6.0" }
vicocomo_session_model = { path = "../vicocomo_session_model", version = "0.6.0" }

[dev-dependencies]
ljumvall_test_utils = { git = "https://github.com/andersjl/ljumvall.git", version = "0.2.2" }
speculate2 = "0.2.0"
