[package]
name = "vicocomo_active_record"
version = "0.1.17"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
case = "*"
lazy_static = "*"
proc-macro2 = "*"
quote = "*"
regex = "*"
syn = { version = "*", features = ["extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils", version = "*" }

