[package]
name = "vicocomo_active_record"
version = "0.4.2"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
case = "1.0.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
regex = "1.7.1"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils" }

