[package]
name = "vicocomo_actix"
version = "0.4.2"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.0"
chrono = "0.4.23"
lazy_static = "1.4.0"
regex = "1.7.1"
serde_json = "1.0.93"
vicocomo = { path = ".." }
vicocomo_actix_config = { path = "config" }
