[package]
name = "vicocomo_actix"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
actix-files.workspace = true
actix-rt.workspace = true
actix-session = { workspace = true, features = ["cookie-session"] }
actix-web.workspace = true
chrono.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde_json.workspace = true
vicocomo = { path = "../vicocomo", version = "0.5.0" }
vicocomo_actix_config = { path = "config", version = "0.5.0" }
