[package]
name = "vicocomo_db_macro"
version = "0.1.17"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
case = "*"
proc-macro2 = "*"
quote = "*"
regex = "*"
syn = { version = "*", features = ["extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils", version = "*" }

