[package]
name = "vicocomo_db_macros"
version = "0.2.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
case = "1"
proc-macro2 = "1.0.39"
quote = "1.0.18"
regex = "1.5.6"
syn = { version = "1.0.95", features = ["full", "extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils" }

