[package]
name = "vicocomo_derive_utils"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }

