[package]
name = "vicocomo_handlebars"
version = "0.4.2"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
futures = "0.3.26"
handlebars = { version = "4.3.6", features = ["dir_source"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
vicocomo = { path = ".." }

