[package]
name = "vicocomo_handlebars"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
handlebars = { workspace = true, features = ["dir_source"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
vicocomo = { path = "../vicocomo", version = "1.0.0" }

