[package]
name = "vicocomo_html_derive"
version = "0.1.8"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
case = "*"
proc-macro2 = "*"
quote = "*"
regex = "*"
syn = { version = "*", features = ["full", "extra-traits", "clone-impls"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils", version = "*" }

