[package]
name = "vicocomo_postgres"
version = "0.4.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
futures = "0.3.24"
postgres-types = "0.2.4"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio-postgres = "0.7.7"
vicocomo = { path = ".." }

