[package]
name = "vicocomo_postgres"
version = "0.4.2"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
futures = "0.3.26"
postgres-types = "0.2.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio-postgres = "0.7.7"
vicocomo = { path = ".." }

