[package]
name = "vicocomo_postgres"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
postgres-types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio-postgres.workspace = true
vicocomo = { path = "../vicocomo", version = "0.6.0" }

