[package]
name = "vicocomo_session_model"
version = "0.2.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
case = "1"
lazy_static = "1.4"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full", "extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils" }

