[package]
name = "vicocomo_session_model"
version = "0.4.2"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
case = "1.0.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils" }

