[package]
name = "vicocomo_session_model"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
case.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
vicocomo_derive_utils = { path = "../vicocomo_derive_utils", version = "1.0.0" }

