[package]
name = "vicocomo_tauri"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tauri.workspace = true
url.workspace = true
vicocomo = { path = "../vicocomo", version = "0.6.0" }
vicocomo_sqlite = { path = "../vicocomo_sqlite", version = "0.6.0" }
vicocomo_tauri_config = { path = "config", version = "0.6.0" }
