[package]
name = "vicocomo_example_init_test_db"
version = "0.2.0-1"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
futures = "0.3.21"
lazy_static = "1.4"
regex = "1.5.6"
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = "0.7.6"
vicocomo = { path = "../.." }
vicocomo_postgres = { path = "../../vicocomo_postgres" }

