[package]
name = "vicocomo_example_reset_test_db"
version = "0.4.2"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.26"
lazy_static = "1.4.0"
regex = "1.7.1"
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = "0.7.7"
vicocomo = { path = "../.." }
vicocomo_postgres = { path = "../../vicocomo_postgres" }

