[package]
name = "vicocomo_actix_config"
version = "0.1.22"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
case = "*"
proc-macro2 = "*"
quote = "*"
regex = "*"
syn = { version = "*", features = ["extra-traits"] }
vicocomo = { version = "*", path = "../.." }
vicocomo_derive_utils = { version = "*", path = "../../vicocomo_derive_utils" }

