[package]
name = "vicocomo_example_authorization_actix"
version = "0.2.0-1"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
actix-files = "0.6"
actix-rt = "2.7"
actix-session = "0.6.2"
actix-web = "4.0.1"
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }

