[package]
name = "vicocomo_example_authorization_actix"
version = "0.4.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-session = "0.7.2"
actix-web = "4.2.1"
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }

