[package]
name = "vicocomo_example_authorization_password_digest"
version = "0.3.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
bcrypt = "0.9.0"
lazy_static = "1.4"
regex = "1.5.6"
vicocomo = { path = "../../.." }
vicocomo_bcrypt = { path = "../../../vicocomo_bcrypt" }

