[package]
name = "vicocomo_example_html_form"
version = "0.1.22"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
vicocomo = { path = "../../.." }
vicocomo_html_macros = { path = "../../../vicocomo_html_macros" }
vicocomo_stubs = { path = "../../../vicocomo_stubs" }

