[package]
name = "vicocomo_example_html_form"
version = "0.4.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
vicocomo = { path = "../../.." }
vicocomo_html_macros = { path = "../../../vicocomo_html_macros" }
vicocomo_stubs = { path = "../../../vicocomo_stubs" }

