[package]
name = "vicocomo_example_actix"
version = "0.1.22"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
actix-files = "0.5"
actix-rt = "1.1.1"
actix-session = "0.4"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15"
lazy_static = "1.4"
regex = "*"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "0.2.25", features = ["macros", "rt-threaded"] }
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }
vicocomo_handlebars = { path = "../../../vicocomo_handlebars" }

