[package]
name = "vicocomo_example_http_server_actix"
version = "0.3.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
actix-files = "0.6"
actix-rt = "2.7"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15"
lazy_static = "1.4"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["macros", "rt"] }
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }
vicocomo_handlebars = { path = "../../../vicocomo_handlebars" }

