[package]
name = "vicocomo_example_http_server_actix"
version = "0.4.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["macros", "rt"] }
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }
vicocomo_handlebars = { path = "../../../vicocomo_handlebars" }

