[package]
name = "vicocomo_example_http_server_actix_db_session"
version = "0.2.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
actix-files = "0.6"
actix-rt = "2.7"
actix-session = "0.6.2"
actix-web = "4.0.1"
dotenv = "0.15"
tokio = { version = "1.18.2", features = ["macros", "rt"] }
tokio-postgres = "0.7.6"
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }
vicocomo_postgres = { path = "../../../vicocomo_postgres" }

