[package]
name = "vicocomo_example_http_server_actix_db_session"
version = "0.4.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.7.0"
actix-session = "0.7.2"
actix-web = "4.2.1"
dotenv = "0.15.0"
tokio = { version = "1.21.1", features = ["macros", "rt"] }
tokio-postgres = "0.7.7"
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }
vicocomo_postgres = { path = "../../../vicocomo_postgres" }

