[package]
name = "vicocomo_example_actix_postgres_session_handlebars"
version = "0.1.22"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
actix-files = "0.5"
actix-rt = "1.1.1"
actix-session = "0.4"
actix-web = "3.3.2"
dotenv = "0.15"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "0.2.25", features = ["macros", "rt-threaded"] }
tokio-postgres = "0.5.5"
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../vicocomo_actix" }
vicocomo_handlebars = { path = "../../../vicocomo_handlebars" }
vicocomo_postgres = { path = "../../../vicocomo_postgres" }

