[package]
name = "vicocomo_example_model_postgres"
version = "0.2.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15"
futures = "0.3.21"
lazy_static = "1.4"
regex = "1.5.6"
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = "0.7.6"
vicocomo = { path = "../../.." }
vicocomo_postgres = { path = "../../../vicocomo_postgres" }

