[package]
name = "vicocomo_example_model_postgres"
version = "0.4.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
chrono = "0.4.22"
dotenv = "0.15.0"
futures = "0.3.24"
lazy_static = "1.4.0"
regex = "1.6.0"
tokio = { version = "1.21.1", features = ["full"] }
tokio-postgres = "0.7.7"
vicocomo = { path = "../../.." }
vicocomo_postgres = { path = "../../../vicocomo_postgres" }

