[workspace]

[package]
name = "vicocomo_example_html_form"
version = "0.6.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
vicocomo = { path = "../../.." }
vicocomo_html_macros = { path = "../../../../vicocomo_html_macros" }
vicocomo_stubs = { path = "../../../../vicocomo_stubs" }

