[workspace]

[package]
name = "vicocomo_example_http_server_actix"
version = "1.0.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.0"
chrono = { version = "0.4.35", features = ["serde"] }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt"] }
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../../vicocomo_actix" }
vicocomo_handlebars = { path = "../../../../vicocomo_handlebars" }

