[workspace]

[package]
name = "vicocomo_example_http_server_actix_read_file"
version = "0.6.0"
authors = ["Anders Lindeberg <ajl@andersjlindeberg.se>"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-multipart-derive = "0.6.1"
actix-rt = "2.8.0"
actix-web = "4.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tempfile = "3.8.1"
vicocomo = { path = "../../.." }
vicocomo_actix = { path = "../../../../vicocomo_actix" }
vicocomo_handlebars = { path = "../../../../vicocomo_handlebars" }
